# xarray_extras

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .stickler.yml  .travis.yml  HOW_TO_RELEASE  MANIFEST.in  MANIFEST.in.py  README.md  conftest.py  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: docs.yml  pre-commit.yml  pytest-minimal.yml  pytest.yml
ci/: .coveragerc  install_python.ps1  requirements-bleeding_edge.yml  requirements-conda-forge.yml  requirements-docs.yml  requirements-flake8.yml  requirements-latest.yml  requirements-macosx.yml  requirements-minimal.yml  requirements-py35.yml  requirements-py36-nodask.yml  requirements-py36-nonumba.yml  requirements-py36-windows.yml  requirements-py36.yml  requirements-py37.yml  requirements-upstream.yml  requirements-windows.yml  requirements.yml
doc/: Makefile  README.rst  api.rst  conf.py  develop.rst  environment.yml  index.rst  installing.rst  whats-new.rst
doc/_static/: style.css
doc/api/: csv.rst  cumulatives.rst  interpolate.rst  numba_extras.rst  recursive_diff.rst  sort.rst  stack.rst  testing.rst
xarray_extras/: __init__.py  compat.py  csv.py  cumulatives.py  interpolate.py  numba_extras.py  recursive_diff.py  sort.py  stack.py  testing.py
xarray_extras/backport/: dask.py  numpy.py  pandas.py
xarray_extras/duck/: __init__.py  sort.py
xarray_extras/kernels/: __init__.py  csv.py  cumulatives.py  interpolate.py  np_to_csv.c  np_to_csv_py.py
xarray_extras/tests/: __init__.py  test_csv.py  test_cumulatives.py  test_interpolate.py  test_ncdiff.py  test_numba_extras.py  test_recursive_diff.py  test_sort.py  test_stack.py  test_testing.py
