[project]
name = "xarray_extras"
authors = [{name = "Guido Imperiale", email = "crusaderky@gmail.com"}]
license = {text = "Apache"}
description = "Advanced / experimental algorithms for xarray"
keywords = ["xarray"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "dask >= 2022.6.0",
    "numba >= 0.56",
    "numpy >= 1.23",
    "pandas >= 1.5",
    "scipy >= 1.9",
    "xarray >= 2022.11.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/crusaderky/xarray_extras"
"Bug Tracker" = "https://github.com/crusaderky/xarray_extras/issues"
Changelog = "https://xarray-extras.readthedocs.io/en/latest/whats-new.html"

[project.readme]
text = "Advanced / experimental algorithms for xarray"
content-type = "text/x-rst"

[tool.setuptools]
packages = ["xarray_extras"]
zip-safe = false # https://mypy.readthedocs.io/en/latest/installed_packages.html
include-package-data = true

[tool.setuptools_scm]
# Use hardcoded version when .git has been removed and this is not a package created
# by sdist. This is the case e.g. of a remote deployment with PyCharm.
fallback_version = "9999"

[tool.setuptools.package-data]
xarray_extras = [
    "py.typed",
    "tests/data/*",
]

[build-system]
requires = [
    "setuptools>=66",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -v -r sxfE --color=yes"
xfail_strict = true
python_files = ["test_*.py"]
testpaths = ["xarray_extras/tests"]
filterwarnings = [
    "error",
    # FIXME these need to be fixed in xarray
    "ignore:__array_wrap__ must accept context and return:DeprecationWarning",
    "ignore:__array__ implementation doesn't accept a copy keyword, so passing copy=False failed:DeprecationWarning",
    # FIXME these need to be looked at
    'ignore:.*will no longer be implicitly promoted:FutureWarning',
    'ignore:.*updating coordinate .* with a PandasMultiIndex would leave the multi-index level coordinates .* in an inconsistent state:FutureWarning',
    # xarray vs. pandas upstream
    'ignore:Converting non-nanosecond precision datetime:UserWarning',
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: nocover",
    "pragma: no cover",
    "TYPE_CHECKING",
    "except ImportError",
    "@overload",
    '@(abc\.)?abstractmethod',
    '@(numba\.)?jit',
    '@(numba\.)?vectorize',
    '@(numba\.)?guvectorize',
]

[tool.codespell]
ignore-words-list = ["ND"]

[tool.ruff]
exclude = [".eggs"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
  "EM101",    # Exception must not use a string literal, assign to variable first
  "EM102",    # Exception must not use an f-string literal, assign to variable first
  "N802",     # Function name should be lowercase
  "N803",     # Argument name should be lowercase
  "N806",     # Variable should be lowercase
  "N816",     # Variable in global scope should not be mixedCase
  "PD901",    # Avoid using the generic variable name `df` for DataFrames
  "PT006",    # Wrong type passed to first argument of `pytest.mark.parametrize`; expected `tuple`
  "PLC0414",  # Import alias does not rename original package
  "PLR0912",  # Too many branches
  "PLR0913",  # Too many arguments in function definition
  "PLR2004",  # Magic value used in comparison, consider replacing `123` with a constant variable
  "PLW2901",  # for loop variable overwritten by assignment target
  "SIM108",   # Use ternary operator instead of if-else block
]
select = [
  "YTT",  # flake8-2020
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "EM",   # flake8-errmsg
  "EXE",  # flake8-executable
  "ICN",  # flake8-import-conventions
  "G",    # flake8-logging-format
  "PIE",  # flake8-pie
  "PT",   # flake8-pytest-style
  "RET",  # flake8-return
  "SIM",  # flake8-simplify
  "ARG",  # flake8-unused-arguments
  "I",    # isort
  "NPY",  # NumPy specific rules
  "N",    # pep8-naming
  "E",    # Pycodestyle
  "W",    # Pycodestyle
  "PGH",  # pygrep-hooks
  "F",    # Pyflakes
  "PL",   # pylint
  "UP",   # pyupgrade
  "RUF",  # unused-noqa
  "EXE001",  #  Shebang is present but file is not executable
]

[tool.ruff.lint.isort]
known-first-party = ["xarray_extras"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["*.tests.*"]
disallow_untyped_defs = false
