[metadata]
name = xarray_extras
author = Guido Imperiale
author_email = crusaderky@gmail.com
license = Apache
description = Advanced / experimental algorithms for xarray
description_content_type=text/plain
keywords = xarray
url = https://github.com/crusaderky/xarray_extras
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = xarray_extras
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.8
install_requires =
    dask >= 2022.6
    numba >= 0.56
    numpy >= 1.23
    pandas >= 1.5
    scipy >= 1.9
    xarray >= 2022.6.0

setup_requires = setuptools_scm

[options.package_data]
xarray_extras =
    py.typed
    tests/data/*

[bdist_wheel]
universal = 1

[wheel]
universal = 1

[tool:pytest]
addopts = --strict-markers --strict-config -v -r sxfE --color=yes
xfail_strict = true
python_files = test_*.py
testpaths = xarray_extras/tests

[coverage:report]
show_missing = true
exclude_lines =
    pragma: nocover
    pragma: no cover
    TYPE_CHECKING
    except ImportError
    @overload
    @(abc\.)?abstractmethod

[flake8]
# https://github.com/python/black#line-length
max-line-length = 88
# E203: PEP8-compliant slice operators
#       https://github.com/python/black#slices
# W503: Allow for breaks before binary operator (Knuth's convention) - see
#       https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
ignore = E203, W503
exclude =
  .eggs
  doc/

[isort]
default_section = THIRDPARTY
known_first_party = xarray_extras
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy]
allow_incomplete_defs = false
allow_untyped_decorators = false
allow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[mypy-*.tests.*]
allow_untyped_defs = true
